Dodao OOP logiku na javascript kod

--- a/index.html
+++ b/index.html
@@ -35,7 +35,9 @@
         </section>
     </main>
 
-    <script src="js/script.js"></script>
+    <script type="module" src="js/sounds.js"></script>
+    <script type="module" src="js/settings.js"></script>
+    <script type="module" src="js/timer.js"></script>
 </body>
 
 </html>
